Implementación de mas endpoints

--- a/src/app/components/users/icommunity/icommunity.component.html
+++ b/src/app/components/users/icommunity/icommunity.component.html
@@ -1,35 +1,20 @@
 <app-header-company *ngIf="myRol === 'empresa'"></app-header-company>
 <app-header-recycler *ngIf="myRol === 'reciclador'"></app-header-recycler>
 
-
 <div class="card-container">
-    <div class="card">
-        <div class="card-header">
-            <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
-            <div class="user-info">
-                <h2>Viridis</h2>
-                <p class="date">13 de Noviembre, 2024</p>
-            </div>
-        </div>
-        <div class="info">
-            <h3 class="description">Estamos orgullosos de realizar la primera publicación jasjs jasjs jqasjasjas jasjas jasj.</h3>
-        </div>
-        <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+  <div *ngFor="let publication of publications" class="card">
+    <div class="card-header">
+      <img class="profile-pic" [src]="publication.imagen_url" alt="Profile Picture">
+      <div class="user-info">
+        <h2>{{ publication.id_usuario }}</h2>
+        <p class="date">{{ publication.fecha_creacion | date:'longDate' }}</p>
+      </div>
     </div>
-
-    <div class="card">
-        <div class="card-header">
-            <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
-            <div class="user-info">
-                <h2>Viridis</h2>
-                <p class="date">13 de Noviembre, 2024</p>
-            </div>
-        </div>
-        <div class="info">
-            <h3 class="description">Estamos orgullosos de realizar la primera publicación jasjs jasjs jqasjasjas jasjas jasj.</h3>
-        </div>
-        <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+    <div class="info">
+      <h3 class="description">{{ publication.descripcion }}</h3>
     </div>
+    <img class="imgprincipal" [src]="publication.imagen_url" alt="Imagen de la publicación">
+  </div>
 </div>
 
-<app-footer-users/>
+<app-footer-users></app-footer-users>
