--- a/src/app/components/company/dialogs-materials/dialog-updatematerial/dialog-updatematerial.component.html
+++ b/src/app/components/company/dialogs-materials/dialog-updatematerial/dialog-updatematerial.component.html
@@ -1,16 +1,15 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Modificar Material</h2>
-    <div class="input-container">
-      <p>Nombre del Material</p>
-      <input type="text" id="name" class="input-field" placeholder="Periodico" required />
-    </div>
-    <div class="input-container">
-      <p>Cantidad (Kg)</p>
-      <input type="number" id="quantity" class="input-field" placeholder="15 Kg" required />
-    </div>
-    <div class="button-container">
-      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-      <button type="submit" class="add-button">Modificar</button>
-    </div>
+  <h2 class="solicitud-titulo">Modificar Material</h2>
+  <div class="input-container">
+    <p>Nombre del Material</p>
+    <input type="text" [(ngModel)]="nombreMaterial" class="input-field" placeholder="Nombre del material" required />
   </div>
-  
+  <div class="input-container">
+    <p>Cantidad (Kg)</p>
+    <input type="number" [(ngModel)]="cantidadMaterial" class="input-field" placeholder="Cantidad en kg" required />
+  </div>
+  <div class="button-container">
+    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+    <button type="button" class="add-button" (click)="saveChanges()">Modificar</button>
+  </div>
+</div>
