--- a/src/app/components/company/materialstable/materialstable.component.html
+++ b/src/app/components/company/materialstable/materialstable.component.html
@@ -19,14 +19,15 @@
       <!-- acciones Column -->
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let song">
-          <button (click)="updateMaterial()" class="table-button-edit" color="secondary">
+        <td mat-cell *matCellDef="let element">
+          <button (click)="updateMaterial(element)" class="table-button-edit" color="secondary">
             <mat-icon>edit</mat-icon>
           </button>
-          <button (click)="deleteMaterial()" class="table-button-delete" mat-icon-button color="warn" >
+          <button (click)="deleteMaterial(element)" class="table-button-delete" mat-icon-button color="warn">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
+        
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
