--- a/src/app/components/users/dialogs-publications/dialog-addpublication/dialog-addpublication.component.html
+++ b/src/app/components/users/dialogs-publications/dialog-addpublication/dialog-addpublication.component.html
@@ -1,16 +1,20 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Agregar Publicación</h2>
-    <div class="input-container">
-      <textarea id="description" class="input-field" placeholder="Descripción"></textarea>
-    </div>
-    <div class="input-container">
-      <div class="file-container">
-        <input type="file" id="fotos" class="file-input" />    
-      </div>
-    </div>
-    <div class="button-container">
-      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-      <button type="submit" class="add-button">Agregar</button>
+  <h2 class="solicitud-titulo">Agregar Publicación</h2>
+  <div class="input-container">
+    <textarea
+      id="description"
+      class="input-field"
+      placeholder="Descripción"
+      [(ngModel)]="description"
+    ></textarea>
+  </div>
+  <div class="input-container">
+    <div class="file-container">
+      <input type="file" id="fotos" class="file-input" (change)="onFileSelected($event)" />
     </div>
   </div>
-  
+  <div class="button-container">
+    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+    <button type="submit" class="add-button" (click)="addPublication()">Agregar</button>
+  </div>
+</div>
