--- a/src/app/components/users/ipublications/ipublications.component.html
+++ b/src/app/components/users/ipublications/ipublications.component.html
@@ -1,45 +1,25 @@
 <app-header-company *ngIf="myRol === 'empresa'"></app-header-company>
 <app-header-recycler *ngIf="myRol === 'reciclador'"></app-header-recycler>
 
-
-
 <div class="card-container">
-    <div class="card">
-        <div class="icons">
-            <img  (click)="updatePublication()" class="options" src="images/lapiz.png" alt="">
-            <img (click)="deletePublication()" class="options" src="images/eliminar.png" alt="">
+    <div *ngFor="let publication of publications" class="card">
+      <div class="icons">
+        <img (click)="updatePublication()" class="options" src="images/lapiz.png" alt="Editar">
+        <img (click)="deletePublication()" class="options" src="images/eliminar.png" alt="Eliminar">
+      </div>
+      <div class="card-header">
+        <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
+        <div class="user-info">
+          <h2>{{ publication.id_usuario }}</h2>
+          <p class="date">{{ publication.fecha_creacion | date }}</p>
         </div>
-        <div class="card-header">
-            <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
-            <div class="user-info">
-                <h2>Viridis</h2>
-                <p class="date">13 de Noviembre, 2024</p>
-            </div>
-        </div>
-        <div class="info">
-            <h3 class="description">Estamos orgullosos de realizar la primera publicación jasjs jasjs jqasjasjas jasjas jasj.</h3>
-        </div>
-        <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+      </div>
+      <div class="info">
+        <h3 class="description">{{ publication.descripcion }}</h3>
+      </div>
+      <img class="imgprincipal" [src]="publication.imagen_url" alt="Imagen de la publicación">
     </div>
-
-    <div class="card">
-        <div class="icons">
-            <img class="options" src="images/lapiz.png" alt="">
-            <img class="options" src="images/eliminar.png" alt="">
-        </div>
-        <div class="card-header">
-            <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
-            <div class="user-info">
-                <h2>Viridis</h2>
-                <p class="date">13 de Noviembre, 2024</p>
-            </div>
-        </div>
-        <div class="info">
-            <h3 class="description">Estamos orgullosos de realizar la primera publicación jasjs jasjs jqasjasjas jasjas jasj.</h3>
-        </div>
-        <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
-    </div>
-</div>
-
-<button (click)="addPublication()" class="circular-button">+</button>
-<app-footer-users/>
+  </div>
+  
+  <button (click)="addPublication()" class="circular-button">+</button>
+  
