--- a/src/app/components/users/dialogs-publications/dialog-updatepublication/dialog-updatepublication.component.html
+++ b/src/app/components/users/dialogs-publications/dialog-updatepublication/dialog-updatepublication.component.html
@@ -1,12 +1,11 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Modificar Publicación</h2>
-    <div class="input-container">
-      <p>Descripción</p>
-      <textarea id="description" class="input-field" placeholder="Estamos felices de iniciar."></textarea>
-    </div>
-    <div class="button-container">
-      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-      <button type="submit" class="add-button">Modificar</button>
-    </div>
+  <h2 class="solicitud-titulo">Modificar Publicación</h2>
+  <div class="input-container">
+    <p>Descripción</p>
+    <textarea [(ngModel)]="descripcion" class="input-field" placeholder="Actualiza tu descripción"></textarea>
   </div>
-  
+  <div class="button-container">
+    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+    <button type="button" class="add-button" (click)="updatePublication()">Modificar</button>
+  </div>
+</div>
