--- a/src/app/components/company/dialog-materialrequest/dialog-deletematerialrequest/dialog-deletematerialrequest.component.html
+++ b/src/app/components/company/dialog-materialrequest/dialog-deletematerialrequest/dialog-deletematerialrequest.component.html
@@ -1,7 +1,8 @@
 <div class="dialog-container">
     <h2 class="solicitud-titulo">¿Estás seguro que deseas eliminar esta solicitud de material?</h2>
     <div class="button-container">
-        <button type="button" class="close-button" (click)="closeDialog()">Cancelar</button>
-        <button type="button" class="add-button">Eliminar</button>
+      <button type="button" class="close-button" (click)="closeDialog()">Cancelar</button>
+      <button type="button" class="add-button" (click)="confirmDelete()">Eliminar</button>
     </div>
-</div>
+  </div>
+  
