--- a/src/app/components/company/dialog-materialrequest/dialog-updatematerialrequest/dialog-updatematerialrequest.component.html
+++ b/src/app/components/company/dialog-materialrequest/dialog-updatematerialrequest/dialog-updatematerialrequest.component.html
@@ -1,35 +1,56 @@
 <div class="dialog-container">
-  <h2 class="solicitud-titulo">Solicitud de Materiales</h2>
+  <h2 class="solicitud-titulo">Modificar Solicitud de Materiales</h2>
+
   <div class="input-container">
     <p>Tipo de Material</p>
-    <select id="name" class="input-field" required>
-      <option value="" disabled selected>Papel</option>
-      <option value="producto1">Producto 1</option>
-      <option value="producto2">Producto 2</option>
-      <option value="producto3">Producto 3</option>
-      <!-- Agrega más opciones según sea necesario -->
-    </select>
+    <!-- Campo de solo lectura para mostrar el tipo de material -->
+    <input 
+      class="input-field" 
+      [value]="materialRequest.nombre_material" 
+      readonly 
+    />
   </div>
+
   <div class="input-container">
     <p>Precio por Kg</p>
-    <input type="number" id="price" class="input-field" placeholder="$12" required />
+    <input 
+      type="number" 
+      [(ngModel)]="materialRequest.precio" 
+      class="input-field" 
+      placeholder="$12" 
+      required 
+    />
   </div>
+
   <div class="input-container">
     <p>Cantidad (Kg)</p>
-    <input type="number" id="quantity" class="input-field" placeholder="15 Kg" required />
+    <input 
+      type="number" 
+      [(ngModel)]="materialRequest.cantidad_solicitada" 
+      class="input-field" 
+      placeholder="15 Kg" 
+      required 
+    />
   </div>
+
   <div class="input-container">
     <p>Descripción</p>
-    <textarea id="description" class="input-field" placeholder="Solicitamos Papel Periodico con las siguientes caracteristicas:*Papel Completo *Limpio."></textarea>
+    <textarea 
+      [(ngModel)]="materialRequest.descripcion" 
+      class="input-field" 
+      placeholder="Detalles adicionales"
+    ></textarea>
   </div>
+
   <div class="input-container">
     <div class="file-container">
-      <p>Foto</p>
-      <input type="file" id="fotos" class="file-input" />    
+      <p>Foto (opcional)</p>
+      <input type="file" class="file-input" (change)="onFileSelected($event)" />
     </div>
   </div>
+
   <div class="button-container">
     <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-    <button type="submit" class="add-button">Modificar</button>
+    <button type="submit" class="add-button" (click)="updateMaterialRequest()">Modificar</button>
   </div>
 </div>
