--- a/src/app/components/company/imaterials-request/imaterials-request.component.html
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.html
@@ -4,8 +4,9 @@
   <div *ngFor="let request of materialRequest" class="card-container">
     <div class="card">
       <div class="icons">
-        <img class="options" src="images/lapiz.png" alt="Modificar Solicitud" (click)="updateMaterialRequest()">
-        <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud" (click)="deleteMaterialRequest()">
+        <img class="options" src="images/lapiz.png" alt="Modificar Solicitud" (click)="updateMaterialRequest(request)"/>
+        <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud" (click)="deleteMaterialRequest(request.id_solicitud)"/>
+
       </div>
       <img 
   class="imgprincipal" 
