Interfaz Crear Anuncio

--- a/src/app/components/recycler/header-recycler/header-recycler.component.html
+++ b/src/app/components/recycler/header-recycler/header-recycler.component.html
@@ -11,7 +11,7 @@
                     <li><a routerLink="/recycler/materialsrecycler" routerLinkActive="active">Solicitudes de Materiales</a></li>
                     <li><a routerLink="/recycler/publications" routerLinkActive="active">Mis Publicaciones</a></li>
                     <li><a routerLink="/recycler/chat" routerLinkActive="active">Chat</a></li>
-                    <li><a href="#">Mis Acuerdos</a></li>
+                    <li><a routerLink="/recycler/agreements" routerLinkActive="active">Mis Acuerdos</a></li>
                 </ul>
             </nav>
         </div>
