--- a/src/app/components/users/footer-users/footer-users.component.scss
+++ b/src/app/components/users/footer-users/footer-users.component.scss
@@ -10,6 +10,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     background-color: white;
+    margin-top: 50px;
   }
   
   .footer {
