--- a/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.scss
+++ b/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.scss
@@ -7,14 +7,15 @@
 
 .card-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 40px; 
     margin-top: 80px;
     margin-bottom: 60px;
     padding: 50px;
+    margin-left: 80px;
 }
 
 .card {
@@ -103,6 +104,7 @@ button:hover {
         gap: 20px; 
         margin-top: 220px;
         margin-bottom: 40px;
+        margin-left: 0px;
     }
 
     .card {
