--- a/src/app/components/users/ipublications/ipublications.component.scss
+++ b/src/app/components/users/ipublications/ipublications.component.scss
@@ -20,12 +20,14 @@
 
 .card-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 60px; 
+    justify-content: flex-start;
+    align-items:  center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 150px; 
     margin-top: 70px;
     margin-bottom: 60px;
+    margin-left: 160px;
     padding: 50px;
 }
 
@@ -108,6 +110,7 @@
         gap: 30px; 
         margin-top: 170px;
         margin-bottom: 50px;
+        margin-left: 0;
     }
 
     .card {
