--- a/src/app/components/users/ipublications/ipublications.component.html
+++ b/src/app/components/users/ipublications/ipublications.component.html
@@ -10,7 +10,7 @@
       <div class="card-header">
         <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
         <div class="user-info">
-          <h2>{{ publication.id_usuario }}</h2>
+          <h2>{{ publication.nombre_usuario }}</h2>
           <p class="date">{{ publication.fecha_creacion | date }}</p>
         </div>
       </div>
