--- a/src/app/components/admin/businesstable/businesstable.component.html
+++ b/src/app/components/admin/businesstable/businesstable.component.html
@@ -19,11 +19,9 @@
       <!-- acciones Column -->
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let song">
+        <td mat-cell *matCellDef="let element">
 
-        <button>Ver más</button>
-
-        <button (click)=" routeToSeeCompany()">Ver mas</button>
+        <button (click)=" routeToSeeCompany(element.id)">Ver mas</button>
 
             
  
