Correccion carga de imagenes

--- a/src/app/components/company/imaterials-request/imaterials-request.component.html
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.html
@@ -10,7 +10,7 @@
       </div>
       <img 
   class="imgprincipal" 
-  [src]="'http://127.0.0.1:8000' + request.imagen_solicitud" 
+  [src]="'https://viridisback.integrador.xyz' + request.imagen_solicitud" 
   alt="Imagen del Material"
   (error)="onImageError($event)">
       <div class="card-content">
