--- a/src/app/components/admin/isee-company-request/isee-company-request.component.html
+++ b/src/app/components/admin/isee-company-request/isee-company-request.component.html
@@ -36,8 +36,8 @@
         </div>
       </div>
       <div class="button-group">
-        <button (click)="rejectAccess()">Negar acceso</button>
-        <button (click)="authorizeAccess()">Autorizar acceso</button>
+        <button class="button-groupx" (click)="rejectAccess()">Negar acceso</button>
+        <button class="button-groupv" (click)="authorizeAccess()">Autorizar acceso</button>
       </div>
     </div>
   </div>
