--- a/src/app/components/company/dialogs-materials/dialog-addmaterial/dialog-addmaterial.component.html
+++ b/src/app/components/company/dialogs-materials/dialog-addmaterial/dialog-addmaterial.component.html
@@ -2,6 +2,7 @@
   <h2 class="solicitud-titulo">Agregar Material</h2>
   <form (ngSubmit)="onSubmit()">
     <div class="input-container">
+      <p>Nombre del Material</p>
       <input
         type="text"
         id="materialname"
@@ -13,6 +14,7 @@
       />
     </div>
     <div class="input-container">
+      <p>Cantidad (Kg)</p>
       <input
         type="number"
         id="quantity"
