--- a/src/app/components/users/landing-page/landing-page.component.html
+++ b/src/app/components/users/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <app-header-users/>
 
 <div>
-    <img src="/images/principal.png" alt="" width="100%" height="auto">
+    <img class="principal" src="/images/principal.png" alt="" width="100%" height="auto">
 </div>
 <div>
     <h2 class="presentation" >Viridis es una empresa comprometida con la sostenibilidad ambiental, dedicada a promover el reciclaje como una solución  para preservar nuestro entorno natural.</h2>
