--- a/src/app/components/admin/dialogsadmin/dialogaddadmin/dialogaddadmin.component.html
+++ b/src/app/components/admin/dialogsadmin/dialogaddadmin/dialogaddadmin.component.html
@@ -1,15 +1,39 @@
-<form (ngSubmit)="onSubmit()">
-  <div class="input-container">
-    <input type="text" [(ngModel)]="adminData.usuario" name="usuario" class="input-field" placeholder="Nombre del Administrador" required />
-  </div>
-  <div class="input-container">
-    <input type="email" [(ngModel)]="adminData.email" name="email" class="input-field" placeholder="Correo Electrónico" required />
-  </div>
-  <div class="input-container">
-    <input type="password" [(ngModel)]="adminData.password" name="password" class="input-field" placeholder="Contraseña" required />
-  </div>
-  <div class="button-container">
-    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-    <button type="submit" class="add-button">Agregar</button>
-  </div>
-</form>
+<div class="dialog-container">
+  <h2 class="solicitud-titulo">Agregar Administrador</h2>
+  <form (ngSubmit)="onSubmit()">
+    <div class="input-container">
+      <input
+        type="text"
+        [(ngModel)]="adminData.usuario"
+        name="usuario"
+        class="input-field"
+        placeholder="Nombre del Administrador"
+        required
+      />
+    </div>
+    <div class="input-container">
+      <input
+        type="email"
+        [(ngModel)]="adminData.email"
+        name="email"
+        class="input-field"
+        placeholder="Correo Electrónico"
+        required
+      />
+    </div>
+    <div class="input-container">
+      <input
+        type="password"
+        [(ngModel)]="adminData.password"
+        name="password"
+        class="input-field"
+        placeholder="Contraseña"
+        required
+      />
+    </div>
+    <div class="button-container">
+      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+      <button type="submit" class="add-button">Agregar</button>
+    </div>
+  </form>
+</div>
