--- a/src/app/components/admin/dialogsadmin/dialogupdateadmin/dialogupdateadmin.component.html
+++ b/src/app/components/admin/dialogsadmin/dialogupdateadmin/dialogupdateadmin.component.html
@@ -1,18 +1,37 @@
-<form>
-  <!-- Campo para el usuario -->
-  <div class="input-container">
-    <label for="name">Nombre del Administrador</label>
-    <input [(ngModel)]="adminData.usuario" name="usuario" type="text" id="name" class="input-field" required />
-  </div>
+<div class="dialog-container">
+  <h1 class="solicitud-titulo">Modificar Administrador</h1>
+  <form>
+    <!-- Campo para el usuario -->
+    <div class="input-container">
+      <label for="name">Nombre del Administrador</label>
+      <input
+        [(ngModel)]="adminData.usuario"
+        name="usuario"
+        type="text"
+        id="name"
+        class="input-field"
+        placeholder="Ingrese el nombre del administrador"
+        required
+      />
+    </div>
 
-  <!-- Campo para el correo -->
-  <div class="input-container">
-    <label for="email">Correo Electrónico</label>
-    <input [(ngModel)]="adminData.email" name="email" type="email" id="email" class="input-field" required />
-  </div>
+    <!-- Campo para el correo -->
+    <div class="input-container">
+      <label for="email">Correo Electrónico</label>
+      <input
+        [(ngModel)]="adminData.email"
+        name="email"
+        type="email"
+        id="email"
+        class="input-field"
+        placeholder="Ingrese el correo electrónico"
+        required
+      />
+    </div>
 
-  <div class="button-container">
-    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-    <button type="button" class="add-button" (click)="updateAdmin()">Modificar</button>
-  </div>
-</form>
+    <div class="button-container">
+      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+      <button type="button" class="add-button" (click)="updateAdmin()">Modificar</button>
+    </div>
+  </form>
+</div>
