--- a/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.scss
+++ b/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.scss
@@ -41,7 +41,7 @@
 }
 
 textarea.input-field {
-  height: 150px; /* Aumenta la altura para hacerlo más amplio */
+  height: 60px; /* Aumenta la altura para hacerlo más amplio */
   resize: vertical; /* Permite cambiar el tamaño verticalmente */
 }
 
@@ -56,7 +56,7 @@ textarea.input-field {
   cursor: pointer;
   transition: background-color 0.3s;
   width: 100%;
-  margin-bottom: 1.2rem;
+  margin-bottom: 2px;
 }
 
 .file-input:focus,
